# kaggle-template

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cpu  KAGGLE_DIRECTION.md  Makefile  README.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/review4/: SKILL.md
.claude/skills/review4/scripts/: review4.sh
competition/: overview.md  related_competitions.md
docs/: backups.md  experiments.md  review4.md
experiments/exp000_sample/: SESSION_NOTES.md  run.py
experiments/expA00_sample/: SESSION_NOTES.md  run.py
experiments/expA00_sample/exp/: 000.yaml
logs/: Log_2026-02-10.md  Log_2026-02-11.md  Log_2026-04-18.md
notebooks/: sample.ipynb
survey/discussion/: README.md
survey/papers/: README.md
tools/: check_submission.py  upload_model.py
utils/: env.py  logger.py  timing.py
