[project]
name = "kaggle-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # 基本ライブラリ
    "numpy",
    "pandas",
    "polars",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    # ML関連
    "lightgbm",
    "xgboost",
    "catboost",
    # Deep Learning（PyPIデフォルト: LinuxはGPU版、他はCPU版）
    "torch",
    "torchvision",
    "torchaudio",
    # 実験管理
    "hydra-core>=1.3",
    "wandb",
    # ユーティリティ
    "tqdm",
    "click",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ipykernel",
    "jupyterlab",
]

[tool.ruff]
line-length = 120
